--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>IDW</title>
+    <title>TuViaje.com</title>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="https://www.airbnb.com.ar/"><img src="../img/logo.png" alt="IDW alojamiento" height="40"></a> 
-            <h2>IDW alojamiento</h2>
+        <div class="contenedorFlex">
+            <div><a href="#"><img class="imgLogo" src="./img/globo.png" alt="IDW alojamiento"></a></div> 
+            <div><h1 class="tituloPrincipal">IDW alojamiento</h1></div>
         </div>
+        <nav class="menu">
+            <ul class="lista">
+                <li><a href="#">Servicio</a></li>
+                <li><a href="#">Destino</a></li>
+                <li><a href="#">Reserva</a></li>
+                <li><a href="#">Testiminiales</a></li>
+                <li> <a href="#">Login</a></li>
+                <li><button>Sign Up</button></li>
+                <li>
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">EN</a></li>
+                            <li><a href="#">ES</a></li>
+                        </ul>
+                    </nav>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="info">
