--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,7 +18,7 @@
             <div class="info">
                 <h3> Encuentra tu alojamiento en este sitio</h3>
                 <p>Esto es un parrafo para agregar info a nuestra portada de sitiode alojamiento</p>
-                <a href="/edit.html"><button class="btn">Buscar</button></a> 
+                <a href="/contacto.html"><button class="btn">Buscar</button></a> 
 
                 <ul>
                     <li>vista de campo</li>
