--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,8 +26,9 @@
     <main>
         <section class="info">
             <div class="info">
-                <h3> Encuentra tu alojamiento en este sitio</h3>
-                <p>Esto es un parrafo para agregar info a nuestra portada de sitiode alojamiento</p>
+                <h3> Encontrá el mejor alojamiento en linea y con un solo click!
+                </h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit fuga, natus, odio accusamus doloribus eaque repellat numquam non porro eligendi delectus dolore ab nisi at et aut iusto voluptate aliquid.</p>
                 <a href="/edit.html"><button class="btn">Buscar</button></a> 
 
                 <ul>
@@ -40,15 +41,11 @@
 
         <section class="contenedor">
             <div class="hotel">
-                <img src="../img/hotel.png" alt="hotel">
+                <img src="../img/asd.jpg" alt="hotel">
                 <a href="https://www.hotelkilton.com.ar/"> Hotel 1</a>
-            </div>
-            <div>
-                <img src="../img/hotel.png" alt="hotel">
+                <img src="../img/asd.jpg" alt="hotel">
                 <a href="https://www.hotelkilton.com.ar/"> Hotel 2</a>
-            </div>
-            <div>
-                <img src="../img/hotel.png" alt="hotel">
+                <img src="../img/asd.jpg" alt="hotel">
                 <a href="https://www.hotelkilton.com.ar/"> Hotel 3</a>
             </div>
         </section>
