--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,6 +11,7 @@
         <div class="contenedorFlex">
             <div><a href="#"><img class="imgLogo" src="./img/globo.png" alt="IDW alojamiento"></a></div> 
             <div><h1 class="tituloPrincipal">IDW alojamiento</h1></div>
+            <div class="backimg"><img src="/idwApi/src/public/img/background.jpg" alt="backgroundViaje"></div>
         </div>
         <nav class="menu">
             <ul class="lista">
