--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>TuViaje.com</title>
 </head>
 <body>
     <header>
-        <div class="contenedorFlex">
-            <div><a href="#"><img class="imgLogo" src="./img/globo.png" alt="IDW alojamiento"></a></div> 
-            <div><h1 class="tituloPrincipal">IDW alojamiento</h1></div>
-            <div class="backimg"><img src="/idwApi/src/public/img/background.jpg" alt="backgroundViaje"></div>
+        <div class="contenedor">
+            <div class="contenedorFlex">
+                <div><a href="#"><img class="imgLogo" src="./img/globo.png" alt="IDW alojamiento"></a></div> 
+                <div><h1 class="tituloPrincipal">IDW alojamiento</h1></div>
+                
+            </div>
+            <nav class="menu">
+                <ul class="lista">
+                    <li><a href="#">Servicio</a></li>
+                    <li><a href="#">Destino</a></li>
+                    <li><a href="#">Reserva</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li> <a href="#">Login</a></li>
+                    <li><button>Más información</button></li>
+                    <li><button>Sign Up</button></li>
+                    <li>
+                        <nav class="menu">
+                            <ul>
+                                <li><a href="#">EN</a></li>
+                                <li><a href="#">ES</a></li>
+                            </ul>
+                        </nav>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="menu">
-            <ul class="lista">
-                <li><a href="#">Servicio</a></li>
-                <li><a href="#">Destino</a></li>
-                <li><a href="#">Reserva</a></li>
-                <li><a href="#">Testiminiales</a></li>
-                <li> <a href="#">Login</a></li>
-                <li><button>Sign Up</button></li>
-                <li>
-                    <nav class="menu">
-                        <ul>
-                            <li><a href="#">EN</a></li>
-                            <li><a href="#">ES</a></li>
-                        </ul>
-                    </nav>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
         <section class="info">
@@ -47,19 +50,8 @@
             </div>
         </section>
 
-        <section class="contenedor">
-            <div class="hotel">
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 1</a>
-            </div>
-            <div>
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 2</a>
-            </div>
-            <div>
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 3</a>
-            </div>
+        <section >
+            
         </section>
     </main>
     <footer>
