Agrego header con navbar

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>IDW</title>
+    <title>AlojAR</title>
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="https://www.airbnb.com.ar/"><img src="../img/logo.png" alt="IDW alojamiento" height="40"></a> 
-            <h2>IDW alojamiento</h2>
+            <a href="https://www.airbnb.com.ar/">
+                <img src="../img/logo_completo.png" alt="alojAR logo" height="40">
+            </a> 
         </div>
+        <nav class="navbar">
+            <ul>
+                <li class="listItem"><a href="">Home</a></li>
+                <li class="listItem"><a href="">Nosotros</a></li>
+                <li class="listItem"><a href="">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="info">
