Agrego ruta en links de navbar

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,15 +10,15 @@
 <body>
     <header>
         <div class="logo">
-            <a href="https://www.airbnb.com.ar/">
+            <a href="">
                 <img src="../img/logo_completo.png" alt="alojAR logo" height="40">
             </a> 
         </div>
         <nav class="navbar">
             <ul>
-                <li class="listItem"><a href="">Home</a></li>
-                <li class="listItem"><a href="">Nosotros</a></li>
-                <li class="listItem"><a href="">Contacto</a></li>
+                <li class="listItem"><a href="/">Home</a></li>
+                <li class="listItem"><a href="institucion.html">Nosotros</a></li>
+                <li class="listItem"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
