--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,51 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>IDW</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>IDW-Check In</title>
 </head>
 <body>
     <header>
         <div class="header-content">
-            <a href="https://www.airbnb.com.ar/"><img src="../img/logo.png" alt="IDW alojamiento" height="40"></a> 
-            <h2>IDW alojamiento</h2>
-        </div>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Alojamientos</a></li>
-            <li><a href="#">Reservas</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="hero">
-            <h1>Encuentra tu alojamiento en este sitio</h1>
-            <p>Esto es un párrafo para agregar información a nuestra portada de sitio de alojamiento</p>
-        </section>
+            <a href="index.html"><img src="img/logo.png" alt="IDW check in" class="logo"></a> 
+            <h1>IDW Check In Alojamientos</h1>
 
-        <section class="container featured-hotels">
-            <div class="hotel">
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 1</a>
-            </div>
-            <div class="hotel">
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 2</a>
-            </div>
-            <div class="hotel">
-                <img src="../img/hotel.png" alt="hotel">
-                <a href="https://www.hotelkilton.com.ar/"> Hotel 3</a>
-            </div>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#">Alojamientos</a></li>
+                <li><a href="#">Reservas</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <p class="first-p">Te conectamos con tu próximo destino. Encontrá el alojamiento que buscás, con condiciones claras y a un click. <br>Animate a vivir la experiencia IDW Chek In.</p>
+        <section class="housing">
+            <article class="housing-item">
+                <figure>
+                    <img src="img/casa.jpg" alt="casa">
+                    <figcaption>Casa en Junín de los Andes</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda deleniti saepe laudantium vel consectetur? Magni, accusamus similique velit nesciunt rem maiores reprehenderit, expedita quas aut, facilis numquam. Ducimus, quis quae.</p>
+            </article>
+            <article class="housing-item">
+                <figure>
+                    <img src="img/dto.jpg" alt="departamento">
+                    <figcaption>Departamento en Neuquén Capital</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita praesentium explicabo odit nostrum corrupti doloribus non eligendi, vero porro quas repellendus at hic temporibus sint vel. Ad est incidunt deserunt.</p>
+            </article>
+            <article class="housing-item">
+                <figure>
+                    <img src="img/cabana.jpg" alt="cabania">
+                    <figcaption>Cabaña en Lago Puelo</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facilis possimus, animi quos eligendi error fugit accusantium minima ipsum numquam iste quae hic explicabo, nisi dolore nulla dignissimos quam vero!</p>
+            </article>
+            <article class="housing-item">
+                <figure>
+                    <img src="img/hotel.jpg" alt="hotel">
+                    <figcaption>Hotel en Las Grutas</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda deleniti saepe laudantium vel consectetur? Magni, accusamus similique velit nesciunt rem maiores reprehenderit, expedita quas aut, facilis numquam. Ducimus, quis quae.</p>
+            </article>
+            <article class="housing-item">
+                <figure>
+                    <img src="img/dto1.jpg" alt="departamento">
+                    <figcaption>Departamento en Viedma</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita praesentium explicabo odit nostrum corrupti doloribus non eligendi, vero porro quas repellendus at hic temporibus sint vel. Ad est incidunt deserunt.</p>
+            </article>
+            <article class="housing-item">
+                <figure>
+                    <img src="img/cabana1.jpg" alt="cabania">
+                    <figcaption>Cabaña en Villa La Angostura</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facilis possimus, animi quos eligendi error fugit accusantium minima ipsum numquam iste quae hic explicabo, nisi dolore nulla dignissimos quam vero!</p>
+            </article>
         </section>
     </main>
     <footer>
         <div class="footer">
-            <p>&copy; IDW 2024. Todos los derechos reservados.</p>
+                <img src="img/logo.png" alt="logo">
+            <p>&copy; IDW Check In 2024. Todos los derechos reservados.</p>
         </div>
+
     </footer>
+    
 </body>
 </html>
