Vinculo hoja de estilo

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,8 +17,8 @@
         <nav class="navbar">
             <ul>
                 <li class="listItem"><a href="/">Home</a></li>
-                <li class="listItem"><a href="institucion.html">Nosotros</a></li>
-                <li class="listItem"><a href="contacto.html">Contacto</a></li>
+                <li class="listItem"><a href="institucion.html" target="_blank">Nosotros</a></li>
+                <li class="listItem"><a href="contacto.html" target="_blank">Contacto</a></li>
             </ul>
         </nav>
     </header>
