--- a/src/public/institucion.html
+++ b/src/public/institucion.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Institucion</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>AlojAR - Nosotros</title>
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
 <body>
     <h1>Sobre nosotros...</h1>
