Arreglos de estilo

--- a/src/public/contacto.html
+++ b/src/public/contacto.html
@@ -8,19 +8,39 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
 <body>
-    <section class="info">
-        <div class="info">
+    <section class="contacto">
+        <div class="contacto">
             <h1> ¡Contactanos!</h1>
             <h3>Seguinos en nuestras diferentes redes sociales para recibir las ultimas novedades.</h3>
             <ul>
-                <li><img src="../img/telefono.png" alt="telefono" height="20"></a> Telefono: +54 11 111 1111111 </li>
-                <li><img src="../img/correo.png" alt="correo" height="20"></a> Correo electronico: lore_ipsum@email.com </li>
-                <li><a href="https://www.instagram.com/"><img src="../img/instagram.png" alt="instagram" height="20"></a> Instagram: @IDW </li>
-                <li><a href="https://twitter.com/"><img src="../img/x.png" alt="x" height="20"></a>Twitter: @IDW </li>
-                <li><a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook" height="20"></a> Facebook: IDW </li>
+                <li>
+                    <a href="tel:+54111111111111">
+                        <img src="../img/telefono.png" alt="telefono" height="20" class="socialIcon">
+                    </a> Telefono: +54 11 111 1111111
+                </li>
+                <li>
+                    <a href="mailto:contacto@alojar.com">
+                        <img src="../img/correo.png" alt="correo" height="20" class="socialIcon">
+                    </a> Correo electronico: contacto@alojar.com
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/alojar">
+                        <img src="../img/instagram.png" alt="instagram" height="20" class="socialIcon">
+                    </a> Instagram: @alojar
+                </li>
+                <li>
+                    <a href="https://twitter.com/alojar">
+                        <img src="../img/x.png" alt="x" height="20" class="socialIcon">
+                    </a>Twitter: @alojar 
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/alojar">
+                        <img src="../img/facebook.png" alt="facebook" height="20" class="socialIcon">
+                    </a> Facebook: @alojar 
+                </li>
             </ul>
         </div>
     </section>
-    <a href="/"><button class="btn">Home</button></a>
+    <a href="/"><button class="btn">Inicio</button></a>
 </body>
 </html>
