--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,15 +25,8 @@
     <main>
         <section class="info">
             <div class="info">
-                <h3> Encuentra tu alojamiento en este sitio</h3>
-                <p>Esto es un parrafo para agregar info a nuestra portada de sitiode alojamiento</p>
-                <a href="/edit.html"><button class="btn">Buscar</button></a> 
-
-                <ul>
-                    <li>vista de campo</li>
-                    <li>departamento</li>
-                    <li>casas</li>
-                </ul>
+                <h2>Sentite como en casa en cualquier parte del mundo</h2>
+                <h4>Encontrá tu alojamiento al mejor precio.</h4>
             </div>
         </section>
 
@@ -65,9 +58,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer">
-            <p>&copy; IDW 2024. Todos los derechos resevados.</p>
-        </div>
+        <p>&copy; Alojar 2024. Todos los derechos resevados.</p>
     </footer>
 </body>
 </html>
