--- a/src/public/institucion.html
+++ b/src/public/institucion.html
@@ -29,6 +29,6 @@
             <p>Puesto: </p>
         </div>
     </section>
-    <a href="/"><button class="btn">Home</button></a>
+    <a href="/"><button class="btn">Inicio</button></a>
 </body>
 </html>
